--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* @import url('./categories.styles.scss'); */
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+*{
+  box-sizing: border-box;
 }
