--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -1,4 +1,4 @@
-.button-container {
+.button-item {
     min-width: 165px;
     width: auto;
     height: 50px;
@@ -6,7 +6,7 @@
     line-height: 50px;
     padding: 0 35px 0 35px;
     font-size: 15px;
-    background-color: black;
+    // background-color: black;
     color: white;
     text-transform: uppercase;
     font-family: 'Open Sans Condensed';
@@ -17,9 +17,19 @@
     justify-content: center;
   
     &:hover {
-      background-color: white;
-      color: black;
-      border: 1px solid black;
+      background-color: black;
+      // color: black;
+    }
+
+    &.submit {
+      background-color: black;
+      color: white;
+
+      &:hover {
+        background-color: white;
+        border: 1px solid black;
+        color: black;
+      }
     }
   
     &.google-sign-in {
